<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/step_time_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_00_00_00"
            android:id="@+id/show_time"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:id="@+id/show_step"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/step_time_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_layout">

        <Button
            android:id="@+id/btn1"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_1"
            android:tag="00"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_2"
            android:tag="01"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/btn1"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_3"
            android:tag="02"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/btn2"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_4"
            android:tag="03"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/btn3"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_5"
            android:tag="10"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn1"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_6"
            android:tag="11"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn2"
            android:layout_toEndOf="@+id/btn5"/>
        <Button
            android:id="@+id/btn7"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_7"
            android:tag="12"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn3"
            android:layout_toEndOf="@+id/btn6"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_8"
            android:tag="13"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn4"
            android:layout_toEndOf="@+id/btn7"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_9"
            android:tag="20"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn5"/>
        <Button
            android:id="@+id/btn10"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_10"
            android:tag="21"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn6"
            android:layout_toEndOf="@+id/btn9"/>
        <Button
            android:id="@+id/btn11"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_11"
            android:tag="22"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn7"
            android:layout_toEndOf="@+id/btn10"/>
        <Button
            android:id="@+id/btn12"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_12"
            android:tag="23"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn8"
            android:layout_toRightOf="@+id/btn11"/>
        <Button
            android:id="@+id/btn13"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_13"
            android:tag="30"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn9"/>
        <Button
            android:id="@+id/btn14"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_14"
            android:tag="31"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn10"
            android:layout_toEndOf="@+id/btn13"/>
        <Button
            android:id="@+id/btn15"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/_15"
            android:tag="32"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn11"
            android:layout_toEndOf="@+id/btn14"/>
        <Button
            android:id="@+id/bt16"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:text=""
            android:tag="33"
            android:layout_margin="5dp"
            android:onClick="onClickBtn"
            android:textColor="@color/white"
            android:layout_below="@+id/btn12"
            android:layout_toEndOf="@+id/btn15"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/reset_layout"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:onClick="restartGame"
            android:layout_gravity="center"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:onClick="exitGame"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>